Work around "Illegal reflective access" warnings in kapt
See https://youtrack.jetbrains.com/issue/KT-30589/Kapt-An-illegal-reflective-access-operation-has-occurred for details.